# stat_frequentist_analysis

./: .gitignore  .readthedocs.yml  Background_Class.py  CrystalBall_Class.py  LICENSE  Notebook_Part_b.ipynb  Notebook_Part_c.ipynb  Notebook_Part_d.ipynb  Notebook_Part_e.ipynb  Notebook_Part_f.ipynb  README.md  S1_CW_Coursework.ipynb  Signal_Background_Class.py  Signal_Class.py  pyproject.toml
Stats_Analysis/: __init__.py
Stats_Analysis/Base_Dist/: CrystalBall_Class.py  ExponentialDecay_Class.py  NormalDistribution_Class.py  UniformDistribution_Class.py  __init__.py
Stats_Analysis/Compound_Dist/: Background_Class.py  Signal_Background_Class.py  Signal_Class.py  __init__.py
docs/: index.html  requirements.txt
docs/source/: conf.py  index.rst
docs/source/Stats_Analysis/Base_Dist/: CrystalBall_Class.rst  ExponentialDecay_Class.rst  NormalDistribution_Class.rst  UniformDistribution_Class.rst  index.rst
docs/source/Stats_Analysis/Compound_Dist/: Background_Class.rst  Signal_Background_Class.rst  Signal_Class.rst  index.rst
notebooks/: Notebook_Part_b.ipynb  Notebook_Part_c.ipynb  Notebook_Part_d.ipynb  Notebook_Part_e.ipynb  Notebook_Part_f.ipynb
