[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Stats_Analysis"
version = "0.1.0"
description = "Statistical analysis and distribution fitting tools"
readme = "README.md"
authors = [
    { name = "Jacob Tutt", email = "jacobtutt@icloud.com" }
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "iminuit",
    "jupyter",
    "ipython",
    "nbsphinx",
    "pandas",
    "tabulate",
    "tqdm",
    "sweights",
    "sphinx>=8.0",
    "sphinx_rtd_theme>=1.2",
    "sphinx-autodoc-typehints>=1.23",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["Stats_Analysis*"]

[project.urls]
Homepage = "https://github.com/JacobTutt/S1_Coursework"
Documentation = "https://s1-coursework.readthedocs.io/en/latest/index.html"